force-app/main/default/objects/Case/fields/ApolloID__c.field-meta.xml
<CustomField>
    <fullName>ApolloID__c</fullName>
    <label>ApolloID</label>
    <length>25</length>
    <type>Text</type>
</CustomField>