force-app/main/default/objects/Case/fields/Case_Reviewed__c.field-meta.xml
<CustomField>
    <fullName>Case_Reviewed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Case Reviewed</label>
    <type>Checkbox</type>
</CustomField>