force-app/main/default/objects/Case/fields/Outside_Business_Hours__c.field-meta.xml
<CustomField>
    <fullName>Outside_Business_Hours__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Outside Business Hours</label>
    <type>Checkbox</type>
</CustomField>