force-app/main/default/objects/Case/fields/Remote_Access__c.field-meta.xml
<CustomField>
    <fullName>Remote_Access__c</fullName>
    <formula>TEXT(Service_Contract__r.Remote_Access__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Remote Access</label>
    <type>Text</type>
</CustomField>