force-app/main/default/objects/Case/fields/Resolution_Timestamp__c.field-meta.xml
<CustomField>
    <fullName>Resolution_Timestamp__c</fullName>
    <label>Resolution Timestamp</label>
    <type>DateTime</type>
</CustomField>