force-app/main/default/objects/Case/fields/Site_Contact__c.field-meta.xml
<CustomField>
    <fullName>Site_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Site Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Cases Site Contact</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>