force-app/main/default/objects/Case/fields/Work_Type__c.field-meta.xml
<CustomField>
    <fullName>Work_Type__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>List of values:
HMI&#39;s .
Networks .
PLC - Mitsubishi .
PLC - Other .
PLC - Pilz .
PLC - Rockwell .
PLC - Schneider .
PLC - Siemens .
SCADA .
SERVO&#39;s .
Telemetry .
Other</inlineHelpText>
    <label>Work Type</label>
    <referenceTo>WorkType</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>