force-app/main/default/objects/Case/fields/YVW_Email_to_Case__c.field-meta.xml
<CustomField>
    <fullName>YVW_Email_to_Case__c</fullName>
    <defaultValue>false</defaultValue>
    <label>YVW Email to Case</label>
    <type>Checkbox</type>
</CustomField>