force-app/main/default/objects/Case/validationRules/VR_CAS01_StatusCheckNewCase.validationRule-meta.xml
<ValidationRule>
    <fullName>VR_CAS01_StatusCheckNewCase</fullName>
    <active>true</active>
    <errorConditionFormula>ISNEW()&amp;&amp; NOT(ISPICKVAL(Status, &#39;New&#39;))</errorConditionFormula>
    <errorDisplayField>Status</errorDisplayField>
    <errorMessage>Status field is &quot;New&quot; on case creation</errorMessage>
</ValidationRule>