force-app/main/default/objects/Case/validationRules/VR_CAS02_TemplateContract_ContactEmail.validationRule-meta.xml
<ValidationRule>
    <fullName>VR_CAS02_TemplateContract_ContactEmail</fullName>
    <active>true</active>
    <errorConditionFormula>(Service_Contract__r.RecordType.DeveloperName = &#39;Template_Contract_RT&#39; &amp;&amp; ISBLANK(Contact.Email)) &amp;&amp;  Case_Reviewed__c = TRUE</errorConditionFormula>
    <errorDisplayField>ContactId</errorDisplayField>
    <errorMessage>The related contact must have an email.</errorMessage>
</ValidationRule>