force-app/main/default/objects/Case/listViews/After_Business_Hours_Job_SA_LV.listView-meta.xml
<ListView>
    <fullName>After_Business_Hours_Job_SA_LV</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>NAME</columns>
    <columns>Service_Contract__c</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>Case_Reviewed__c</columns>
    <columns>Calculated_Priority__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Service_Territory__c</field>
        <operation>equals</operation>
        <value>SA</value>
    </filters>
    <filters>
        <field>CASES.STATUS</field>
        <operation>notEqual</operation>
        <value>Finished</value>
    </filters>
    <filters>
        <field>Outside_Business_Hours__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>After Business Hours Job - SA</label>
    <sharedTo>
        <group>SA</group>
    </sharedTo>
</ListView>