force-app/main/default/objects/Case/listViews/Call_Center_Created_Cases_LV.listView-meta.xml
<ListView>
    <fullName>Call_Center_Created_Cases_LV</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>Account_Record_Type__c</columns>
    <columns>NAME</columns>
    <columns>Service_Contract__c</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>Case_Reviewed__c</columns>
    <columns>Calculated_Priority__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Tech_Email_to_Case__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Call Center Created Cases</label>
</ListView>