force-app/main/default/objects/Case/listViews/YVW_Email_Created_Cases.listView-meta.xml
<ListView>
    <fullName>YVW_Email_Created_Cases</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>Account_Record_Type__c</columns>
    <columns>NAME</columns>
    <columns>Service_Contract__c</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>Case_Reviewed__c</columns>
    <columns>Calculated_Priority__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>YVW_Email_to_Case__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>YVW Email Created Cases</label>
</ListView>